# pauth

./: Cargo.toml  README.md  diesel.toml  history_schema.sql
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2020-11-08-172445_config_table/: down.sql  up.sql
src/: db.rs  lib.rs  models.rs  pauth_error.rs  schema.rs
