[package]
name = "pauth"
version = "0.1.0"
authors = ["paulpr0 <github@pr0.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4"
chrono = { version = "0.4.13", features = ["serde"] }
lazy_static = "1.4.0"
r2d2 = "0.8.9"
uuid = { version = "0.8.1", features = ["v4"] }
rand = "0.7.3"